--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
@@ -9,8 +9,27 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <header>
+        <div id="navegador">
+            <nav class="navegador">
+                <div class="logo_colpatria">
+                    <ul>
+                        <li><a href="#"><img><span>logo</span></a></li>
+                        <li><a href="#">Colpatria scotibank</a></li>
+                    </ul>
+                </div>
+                <div class="usuario">
+                    <ul>
+                        <li><a href="#"><span>User</span></a></li>
+                        <li><a href="#"><img></a><span>Foto</span></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
     <div> 
     </div>
 </body>
