--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
     <header>
@@ -24,13 +25,22 @@
                 <div class="usuario">
                     <ul>
                         <li><a href="#"><span>User</span></a></li>
-                        <li><a href="#"><img></a><span>Foto</span></a></li>
+                        <li><a href="#"><img><span>Foto</span></a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <div> 
-    </div>
+    <section class="selector">
+        <div class="seleccion">
+            <ul>
+                <li><a><span>Provedores</span></a></li>
+                <li><a><span>Seguimiento</span></a></li>
+            </ul>            
+        </div>
+    </section>
+    <section>
+        <p></p>
+    </section>
 </body>
 </html>
