--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Proveedores/CSS/main.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Proveedores/CSS/main.css
@@ -338,8 +338,9 @@ top: -8px;
 ==========================================*/
 
 .member-thumb {
-  width: 273px;
   position: relative;
+  height: 250px;
+  width: 300px;
 }
 
 .member-thumb .overlay h5 {
