--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
@@ -17,7 +17,12 @@
         <div id="navegador">
             <nav class="navegador">
                 <div class="logo_colpatria">
-                    <ul></ul>
+                    <div class="animated2 flash2">
+                        <img src="~/Design/Management/Colpatria.png">
+                    </div>
+                    <div class="animated2 flash">
+                        <img src="~/Design/Management/Scotia.png">
+                    </div>
                 </div>
                 <div class="usuario">
                     <ul>
@@ -28,6 +33,9 @@
             </nav>
         </div>
     </header>
+    <div class="search">
+        Buscar
+    </div>
     <section class="selector">
         <div class="seleccion">
             <ul>
