--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/main.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/main.css
@@ -41,55 +41,6 @@ a{
     
 }
 
-/* seccion1*/
-section{
-    width: 100%;
-    height: 89vh;
-    background: url(logol.jpg);
-    background-size: cover;
-    background-repeat: none; 
-}
-section{
-    display: inline;
-}
-.seleccion{
-    display: inline;
-}
-.seleccion ul li{
-    
-text-shadow: 1px 1px 20px #000000;
-    background-color: 	#8B0000;
-    width: 200px;
-    height: 45px;
-    display: block;
-    float: right;
-    font-size: 2em;
-    margin: 0% 12%;
-}
-.seleccion ul h2{
-    
-    text-shadow: 1px 1px 20px #000000;
-        background-color: 	#8B0000;
-        width: 200px;
-        height: 45px;
-        display: block;
-        float: right;
-        font-size: 2em;
-        margin: 0% 5%;
-    }
-.seleccion ul li a{
-    margin: ;
-    color:white;
-    margin: 30pc 15px;
-    font-family: fantasy;
-}
-.seleccion ul h2 a{
-    margin: ;
-    color:white;
-    margin: 30pc 15px;
-    font-family: fantasy;
-}
-
 /*logo*/
 
 .animated { 
@@ -159,3 +110,51 @@ text-shadow: 1px 1px 20px #000000;
        padding-left: 80%;
    }
 
+.selector{
+    transition-duration: 2s;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+   div#uno, div#dos{
+       margin: 1%;
+       
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-content: center;
+       padding: 1%;
+       width: 200px;
+	background-color: #ec1c2c;
+}
+
+
+img.icon{
+	display: block;
+	margin:50px auto;
+	background-color: white;
+	width:40px;
+	padding:20px;
+	-webkit-border-radius: 50%;
+	-webkit-box-shadow: 0px 0px 0px 30px rgba(255,255,255,0);
+	-webkit-transition:box-shadow .4s;
+}
+
+p.texto{
+	font-size: 1.2em;
+	color:white;
+	text-align: center;
+	padding-top:10px;
+	opacity: .6;
+	-webkit-transition: padding-top .4s;
+}
+
+
+#uno:hover p.texto, #dos:hover p.texto{
+	padding-top: 30px;
+    opacity: 1;
+}
+
+#uno:hover img.icon, #dos:hover img.icon{
+	-webkit-box-shadow:0px 0px 0px 0px white;
+}
