--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Proveedores/CSS/prodcts.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Proveedores/CSS/prodcts.css
@@ -4,24 +4,21 @@
 }
 .content{
     width: 80%;
-    height: 100%;
+    height: 100vh;
     background-color: rgb(243, 242, 239);
     margin-left: 10%;
-    display: flex;
-    flex-wrap: wrap;
 }
  
 .boxes{
-    width: 200px;
-    height: 200px;
-    margin-right: 150px;
-    margin-bottom: 100px;
+    width: 20%;
+    height: 50%;
 }
 
 .img{
     margin-left: 10%;
     margin-top: 10%;
-    width: 100%;
+    width: 80%;
+    height: 80%;
 }
 
 .go-products{
@@ -29,7 +26,9 @@
     align-content: center;
     width: 50%;
     margin-left: 25%;
-    margin-top: 15%;
-    text-decoration: none;
+    margin-top: 50%;
 }
 
+section{
+    display: flex;
+}
