--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Management/Index.cshtml
@@ -17,27 +17,50 @@
         <div id="navegador">
             <nav class="navegador">
                 <div class="logo_colpatria">
-                    <ul></ul>
+                    <div class="animated2 flash2">
+                        <img src="~/Design/Management/Colpatria.png">
+                    </div>
+                    <div class="animated2 flash">
+                        <img src="~/Design/Management/Scotia.png">
+                    </div>
                 </div>
                 <div class="usuario">
                     <ul>
-                        <li><a href=""><img src="~/Design/Management/go.png"></a></li>
-                        <h1><a href="">Duvan Pedroza</a></h1>
+                        <li><a href=""><img src="~/Design/Management/profileimg.png"></a></li>
+                        <h1><a href="" class="nombre">ADMINISTRADOR</a></h1>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+    <div class="search">
+        <button class="srch"><img src="~/Design/Management/lupa2.png"></button>
+        <input type="search" class="inpt">
+    </div>
     <section class="selector">
-        <div class="seleccion">
-            <ul>
-                <li><a><span>Provedores</span></a></li>
-                <li><a><span>Seguimiento</span></a></li>
-            </ul>
+        <div class="contenedor" id="uno">
+            <img class="icon" src="~/Design/Management/libreta.png">
+            <p class="texto">Provedores</p>
+        </div>
+
+        <div class="contenedor" id="dos">
+            <img class="icon" src="~/Design/Management/ojo.png">
+            <p class="texto">Seguimiento</p>
         </div>
     </section>
-    <section>
-        <p></p>
-    </section>
+    <script src="~/Scripts/jquery-1.8.0.js"></script>
+    <script>
+        $('#uno, #dos').hover(function () {
+            $(this).stop().animate({
+                height: "250px",
+                maxHeight: "260px"
+            });
+        }, function () {
+            $(this).stop().animate({
+                height: "200px",
+                maxHeight: "215px"
+            });
+        });
+    </script>
 </body>
 </html>
