--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Suppliers/Index.cshtml
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Suppliers/Index.cshtml
@@ -8,53 +8,36 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Proveedores</title>
-
+    <title>Scotia Suppliers Admin</title>
     <link href="~/Design/Proveedores/CSS/prodcts.css" rel="stylesheet" />
     <link href="~/Design/Proveedores/CSS/media-queries.css" rel="stylesheet" />
     <link href="~/Design/Proveedores/CSS/main.css" rel="stylesheet" />
     <link href="~/Design/Proveedores/CSS/jquery.fancybox.css" rel="stylesheet" />
     <link href="~/Design/Proveedores/CSS/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/Design/Proveedores/CSS/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Design/Proveedores/CSS/animate.css" rel="stylesheet" />
-</head>
-<body>
-    <header></header>
-    <!--<div id="navegador">
-        <nav class="navegador">
-            <div class="logo_colpatria">
-                <ul>
-                    <li><a href="#"><img><span>logo</span></a></li>
-                    <li><a href="#">Colpatria scotibank</a></li>
-                </ul>
-            </div>
-            <div class="usuario">
-                <ul>
-                    <li><a href="#"><span>User</span></a></li>
-                    <li><a href="#"><img></a><span>Foto</span></a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>-->
 
+</head>
+<body style="background: url(../../Design/Management/logol.jpg);">
+    
     <div class="content">
-        <section class="boxes">
-            @foreach (var x in Model)
-            {
-            <figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated animated img" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
-                <div class="member-thumb">
-                    <img src="" alt="Team Member" class="img-responsive">
-                    <figcaption class="overlay">
-                        <h5>@x.Name</h5>
-                        <p>@x.Description</p>
-                        <ul>
-                            <li class="go-products"><a href="*">Ver Productos</a></li>
-                        </ul>
-                    </figcaption>
-                </div>
-            </figure>
-            }
-        </section>
+        @foreach (var x in Model)
+        {
+            <div class="boxes">
+                <figure class="team-member col-md-3 col-sm-6 col-xs-12 text-center" data-wow-duration="500ms" style="visibility: visible; animation-duration: 500ms; animation-name: fadeInUp;">
+                    <div class="member-thumb">
+                        <img src="@x.ImageUrl" alt="Team Member" class="boximg">
+                        <figcaption class="overlay">
+                            <h5>@x.Name</h5>
+                            <p>@x.Description</p>
+                            <ul>
+                                <li class="go-products"><a style="color: white; text-decoration: none;" href="*">Ver Productos</a></li>
+                            </ul>
+                        </figcaption>
+                    </div>
+                </figure>
+            </div>
+        }
+
 
     </div>
     <script src="~/Design/Proveedores/script.js"></script>
