--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
@@ -67,6 +67,59 @@ a:active {
 .section {
   padding: 100px 0; }
 
+
+/*--
+    .hero-area start
+--*/
+.bg-1 {
+  background-image: url("../images/header-bg.jpg");
+  background-size: cover;
+  background-attachment: fixed; }
+
+.bg-gray {
+  background: #f8f8f8; }
+
+.hero-area {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .hero-area h1 {
+    color: #fff;
+    font-size: 60px;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-bottom: 19px;
+    margin-top: 30px; }
+  .hero-area p {
+    color: #fff;
+    font-size: 20px;
+    line-height: 1.3; }
+  .hero-area .counter {
+    background: rgba(255, 255, 255, 0.2);
+    padding: 18px; }
+    .hero-area .counter ul li {
+      background-color: rgba(255, 255, 255, 0.3);
+      color: #fff;
+      display: inline-block;
+      line-height: 25px;
+      padding: 25px 28px 20px;
+      text-align: center;
+      width: 49%;
+      margin-bottom: 3px; }
+      .hero-area .counter ul li span {
+        display: block;
+        font-size: 16px;
+        font-weight: 600; }
+      .hero-area .counter ul li .digit {
+        display: inline-block;
+        font-size: 50px;
+        font-weight: bold;
+        line-height: 50px;
+        position: relative;
+        overflow: hidden;
+        height: 60px; }
+
 /*--
     custom heading
 --*/
