--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
@@ -159,9 +159,10 @@ a:active {
   margin-top: 30px;
 }
 .btn-home:hover, .btn-home:focus {
-  background-color: #fff;
-  color: #555;
-  border: 1px solid #fff;
+  background-color: rgba(211, 202, 202, 0.26);
+  color: rgb(255, 255, 255);
+
+  border: 1px solid #817f7f;
 }
 
 /*--
