--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
@@ -205,7 +205,8 @@ a:active {
   height: auto; }
 
 .profile-img{
-  border: 1px solid black;
+  position: relative;
+  border: 2px solid black;
   border-radius: 50%; 
 }
 
