--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/css/style.css
@@ -284,3 +284,37 @@ a:active {
     
   padding-left: 15%;
    }
+
+   .add-rest{
+       position: absolute;
+       float: left;
+       margin-left: 850px;
+       margin-bottom: 150px;
+   }
+
+   .add{
+       margin:10px;
+   }
+   .rest{
+       margin:10px;
+   }
+.block .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.block:hover .tooltiptext {
+    visibility: visible;
+}
