--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Suppliers/Index.cshtml
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Views/Suppliers/Index.cshtml
@@ -25,8 +25,8 @@
         <nav class="navbar navbar-fixed-top  navigation " id="top-nav">
             <div class="collapse navbar-toggleable-md" id="navbarResponsive">
                 <ul class="nav navbar-nav menu float-lg-right" id="top-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#">Santiago Armando Pedroza</a></li>
-                    <li class="nav-item profile-img"><a><img src="images/profileimg.png" alt=""></a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">Laura Fernandez</a></li>
+                    <li class="nav-item profile-img"><a><img src="https://icon-icons.com/icons2/876/PNG/32/female-user-profile-on-round-button_icon-icons.com_68317.png" alt=""></a></li>
                 </ul>
             </div>
         </nav>
@@ -54,7 +54,8 @@
                             <a class="btn btn-home prov" href="#service" role="button">Provedores</a>
                         </div>
                         <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
-                            <a class="btn btn-home segui" href="Pages/seguimiento/index.html" role="button">Seguimiento</a>
+                            <!--<a class="btn btn-home segui" href="Pages/seguimiento/index.html" role="button">Seguimiento</a>-->
+                            @Html.ActionLink("Seguimiento", "SeguimientoSelected",null, new { @class = "btn btn-home segui", @role = "button" } )
                         </div>
                     </div>
                 </div>
@@ -66,20 +67,40 @@
             <div class="row">
                 <div class="heading wow fadeInUp">
                     <h2>Provedores</h2>
+                    <div class=add-rest>
+                        <button class="add"><img src="~/Design/Index/images/add.png" /></button>
+                        <button class="rest"><img src="~/Design/Index/images/del.png" /></button>
+                    </div>
                 </div>
+                
                 @foreach (var x in Model)
                 {
-                <div class="col-sm-6 col-md-3 wow fadeInLeft">
-                    <div class="block">
-                        <img src="@x.ImageUrl" style="width: 250px;" />
-                        <h3>@x.Name</h3>
-                        <p>@x.Description</p>
-                        <button type="submit" style=" background-color: #C0392B; /* Green */    border: none;    color: white;    padding: 15px 32px;    text-align: center;    text-decoration: none;    display: inline-block;    font-size: 16px;">Ver Productos</button>
-                    </div>
-                </div>   
-                }
+                    using (Html.BeginForm("SupplierSelected", "Suppliers", FormMethod.Post))
+                    {
+                        <div class="col-sm-6 col-md-3 wow fadeInLeft">
+                            <div class="block">
+                                <img src="@x.ImageUrl" style="width: 250px;" />
+                                <h3>@x.Name</h3>
+                                <p>@x.Description</p>
+                                @Html.HiddenFor(model => model.ElementAt(1).SupplierId)
+                                <button type="submit" style=" background-color: #C0392B; /* Green */    border: none;    color: white;    padding: 15px 32px;    text-align: center;    text-decoration: none;    display: inline-block;    font-size: 16px;">Ver Productos</button>
+                            </div>
+                        </div>
+                        }
+                    }
             </div>
         </div>
     </section>
+    <script src="~/Design/Index/js/vendor/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+    <script src="~/Design/Index/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="~/Design/Index/js/jquery.lwtCountdown-1.0.js"></script>
+    <script src="~/Design/Index/js/owl.carousel.min.js"></script>
+    <script src="~/Design/Index/js/jquery.validate.min.js"></script>
+    <script src="~/Design/Index/js/jquery.form.js"></script>
+    <script src="~/Design/Index/js/jquery.nav.js"></script>
+    <script src="~/Design/Index/js/wow.min.js"></script>
+    <script src="~/Design/Index/js/main.js"></script>
 </body>
 </html>
